# gubar

./: .envrc  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  configure.ac  gubar.scm  guix.scm  hall.scm  manifest.scm  pre-inst-env.in
gubar/: blocks.scm  gublock.scm  hconfig.scm  main.scm  swaybar-protocol.scm
gubar/blocks/: battery.scm  brightness.scm  date-time.scm  network-manager-wifi.scm  volume-pipewire.scm  xkb-layout.scm
scripts/: gubar.in
src/: gubar.scm
src/gubar/: blocks.scm  gublock.scm  swaybar-protocol.scm
src/gubar/blocks/: battery.scm  date-time.scm  label.scm  network-manager-wifi.scm  volume-pipewire.scm
